# graphl-api

./: .bazelrc  .gitignore  .plzconfig  .travis.yml  BUILD.bazel  Makefile  WORKSPACE  bazel.mk  distdir.sh  drone.yml  go.mod  go.sum  project.mk  repositories.bzl
.github/workflows/: workflow.yml
cmd/graphql/: BUILD.bazel  main.go
pkg/api/: BUILD.bazel  task.go
pkg/api/server/: BUILD.bazel  endpoint_task.go  server.go  service_task.go
pkg/graphql/: BUILD.bazel  generated.go  gqlgen.yml  resolver.go  schema.graphql  some
pkg/health/: BUILD.bazel  health.go  health_test.go
pkg/metrics/: BUILD.bazel  metrics.go
pkg/middleware/: BUILD.bazel  metrics.go
