load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/mishudark/graphql-api",
    external = "vendored",
)

load("@com_github_atlassian_bazel_tools//golangcilint:def.bzl", "golangcilint")

golangcilint(
    name = "golangcilint",
    paths = [
        "pkg/...",
    ],
    prefix = "github.com/mishudark/graphql-api",
)
