load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mishudark/graphql-api/cmd/graphql",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api/server:go_default_library",
        "//pkg/graphql:go_default_library",
        "//pkg/health:go_default_library",
        "//pkg/metrics:go_default_library",
        "//vendor/github.com/99designs/gqlgen/handler:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "base_image",
    ports = ["8000"],
    base = "@go_image_base//image",
)

go_image(
    name = "docker",
    base = ":base_image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)
