load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "generated.go",
        "resolver.go",
    ],
    importpath = "github.com/mishudark/graphql-api/pkg/graphql",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/api/server:go_default_library",
        "//vendor/github.com/99designs/gqlgen/graphql:go_default_library",
        "//vendor/github.com/99designs/gqlgen/graphql/introspection:go_default_library",
        "//vendor/github.com/mishudark/errors:go_default_library",
        "//vendor/github.com/vektah/gqlparser:go_default_library",
        "//vendor/github.com/vektah/gqlparser/ast:go_default_library",
    ],
)
