load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["metrics.go"],
    importpath = "github.com/mishudark/graphql-api/pkg/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/go.opencensus.io/exporter/prometheus:go_default_library",
        "//vendor/go.opencensus.io/stats:go_default_library",
        "//vendor/go.opencensus.io/stats/view:go_default_library",
        "//vendor/go.opencensus.io/tag:go_default_library",
    ],
)
