load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "endpoint_task.go",
        "server.go",
        "service_task.go",
    ],
    importpath = "github.com/mishudark/graphql-api/pkg/api/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/middleware:go_default_library",
        "//vendor/github.com/go-kit/kit/endpoint:go_default_library",
        "//vendor/github.com/mishudark/errors:go_default_library",
    ],
)
